--- a/residual plasmid/compiled primer runs 2 to 5.ipynb
+++ b/residual plasmid/compiled primer runs 2 to 5.ipynb
@@ -4751,7 +4751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 1,
    "id": "dcb4e413",
    "metadata": {},
    "outputs": [],
@@ -4766,7 +4766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "id": "30bdf0bc",
    "metadata": {},
    "outputs": [
@@ -4987,7 +4987,7 @@
        "19    1  Amp4  100pg/ul  15.052     100.0"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5001,7 +5001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "id": "2f107d80",
    "metadata": {},
    "outputs": [
@@ -5060,7 +5060,7 @@
        "83    2  Amp4  NTC  35.764       NaN"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5071,7 +5071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "id": "0ce88c0f",
    "metadata": {},
    "outputs": [],
@@ -5081,11 +5081,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "id": "96b8c46e",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5098,7 +5096,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5110,7 +5108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 6,
    "id": "26e8879d",
    "metadata": {},
    "outputs": [],
@@ -5120,7 +5118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 7,
    "id": "f905ebf3",
    "metadata": {
     "scrolled": true
@@ -5253,7 +5251,7 @@
        "10    1  Amp2  100fg/ul  25.537       0.1"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5264,7 +5262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 8,
    "id": "384f3c4e",
    "metadata": {},
    "outputs": [
@@ -5272,7 +5270,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-175-8d82a81e9f53>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-8-8d82a81e9f53>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -5287,7 +5285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 9,
    "id": "c8228b56",
    "metadata": {},
    "outputs": [
@@ -5430,7 +5428,7 @@
        "[200 rows x 5 columns]"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5441,7 +5439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 10,
    "id": "65059662",
    "metadata": {
     "scrolled": true
@@ -5810,7 +5808,7 @@
        "201    4  Amp4  100fg/ul  25.926      -1.0"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5822,7 +5820,8 @@
     "# it will return us the values in chronological order. What we want is in the specific order\n",
     "# of '1,4,5,9,10'\n",
     "\n",
-    "# so over here, we are creating\n",
+    "# so over here, we are creating a dictionary, whose key is the name under the 'Amp' column, and the value is the\n",
+    "# corresponding filtered DataFrame containing values only for the Amplicon\n",
     "\n",
     "dict_amp = {}\n",
     "for amp in [1,4,5,9,10]:\n",
@@ -5835,11 +5834,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 11,
    "id": "29b5e087",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# here we define a function to return the statistics of the regression line\n",
+    "# when we pass in the x and y values. we pass in the x and y values as the Quantity and CT, respectively.\n",
+    "# the groupby call will help us to get the mean of the values for all the replicates grouped by the 'Run' and\n",
+    "# the 'Conc'. we use the xs.method to go down 1 level in the multi-level index to the 'Run' level because we want to\n",
+    "# take the x and y values across all runs\n",
+    "\n",
+    "# we use the stats.lingress() method from the scipy package to return the values in a tuple\n",
+    "# and then append these values to a list\n",
+    "\n",
+    "\n",
     "stats_list = []\n",
     "def get_stats(dict_amp):\n",
     "    slope, intercept, r_value, p_value, std_err = stats.linregress(\n",
@@ -5850,7 +5859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 12,
    "id": "2a1a3859",
    "metadata": {},
    "outputs": [
@@ -5867,6 +5876,11 @@
     }
    ],
    "source": [
+    "# here we will be doing a for loop to loop through the 5 Amplicons and dumping the\n",
+    "# stats into the list\n",
+    "# we want the 'index_name' so that we can use it to\n",
+    "# quickly create the 'names' of the rows\n",
+    "\n",
     "stats_list = []\n",
     "index_names = []\n",
     "for amp in [1,4,5,9,10]:\n",
@@ -5877,7 +5891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 13,
    "id": "4f1570f1",
    "metadata": {},
    "outputs": [
@@ -5896,9 +5910,9 @@
        "  0.02556977382250136],\n",
        " [-3.2634000000000003,\n",
        "  21.621,\n",
-       "  -0.9998584703140501,\n",
-       "  2.021137927366622e-06,\n",
-       "  0.03170257613085176],\n",
+       "  -0.99985847031405,\n",
+       "  2.0211379273690028e-06,\n",
+       "  0.031702576130864205],\n",
        " [-3.3569000000000004,\n",
        "  22.3107,\n",
        "  -0.999737631611078,\n",
@@ -5911,7 +5925,7 @@
        "  0.029998166610645714]]"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5922,7 +5936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 14,
    "id": "ff80b72d",
    "metadata": {},
    "outputs": [
@@ -6008,7 +6022,7 @@
        "Amp10 -3.3289    22.1531 -0.999878  1.613339e-06  0.029998"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6022,6 +6036,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "edb204b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e3f312e",
    "metadata": {},
    "outputs": [],
    "source": []
