updated code to get the intercept standard error for the standard curve

--- a/residual plasmid/compiled Lplasmid std/compiled plasmid.ipynb
+++ b/residual plasmid/compiled Lplasmid std/compiled plasmid.ipynb
@@ -30,8 +30,7 @@
        " 'compiled plasmid.ipynb',\n",
        " 'compiledPlots for lin plasmid Standards for amps 1 to 10.png',\n",
        " 'Lplasmid compiled stds.csv',\n",
-       " 'Lplasmid compiled stds.xlsx',\n",
-       " '~$Lplasmid compiled stds.xlsx']"
+       " 'Lplasmid compiled stds.xlsx']"
       ]
      },
      "execution_count": 2,
@@ -2442,7 +2441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "id": "4de451ff",
    "metadata": {
     "scrolled": true
@@ -2774,7 +2773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "id": "06732d35",
    "metadata": {},
    "outputs": [
@@ -2784,7 +2783,7 @@
        "28.686"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2795,7 +2794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "id": "d6ed524c",
    "metadata": {},
    "outputs": [
@@ -2805,7 +2804,7 @@
        "(28.686, 28.686)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2816,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "id": "663e5158",
    "metadata": {
     "scrolled": true
@@ -2948,7 +2947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "id": "23c97491",
    "metadata": {},
    "outputs": [
@@ -2958,7 +2957,7 @@
        "69"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2969,7 +2968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "id": "328888e8",
    "metadata": {},
    "outputs": [],
@@ -2979,7 +2978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "id": "a052eedb",
    "metadata": {
     "scrolled": true
@@ -3523,7 +3522,7 @@
        "61     2    1     1000000.0  17.858     1000.0000       3.0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3534,7 +3533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "id": "ff5ddd5f",
    "metadata": {},
    "outputs": [
@@ -3704,7 +3703,7 @@
        "[69 rows x 4 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3715,7 +3714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "id": "9e35d61c",
    "metadata": {
     "scrolled": true
@@ -4238,7 +4237,7 @@
        "     3.0        (7.292784566660584, 9.289215433339416)  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4249,7 +4248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "id": "2d4c79ac",
    "metadata": {},
    "outputs": [
@@ -4259,7 +4258,7 @@
        "33.284"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4270,7 +4269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "id": "0c7c0147",
    "metadata": {},
    "outputs": [],
@@ -4280,7 +4279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "id": "eb0c1866",
    "metadata": {},
    "outputs": [
@@ -4290,7 +4289,7 @@
        "Float64Index([-5.0, -4.0, -3.0, -2.0, -1.0, 0.0, 1.0, 2.0, 3.0], dtype='float64', name='Quantity')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4301,7 +4300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "id": "9407d93b",
    "metadata": {},
    "outputs": [
@@ -4312,7 +4311,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-54-50327bfced92>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdict_amp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mamp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'CT'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'mean'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-40-50327bfced92>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdict_amp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mamp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'CT'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'mean'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m: 10"
      ]
     }
@@ -4323,7 +4322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "id": "a790323f",
    "metadata": {},
    "outputs": [
@@ -4349,16 +4348,17 @@
     "    print(amp)\n",
     "    for qty in dict_amp[amp]:\n",
     "        #print(dict_amp[amp].index.get_level_values(1))\n",
-    "        slope, intercept, r_value, p_value, std_err = stats.linregress(\n",
+    "        result = stats.linregress(\n",
     "            x = dict_amp[amp].index.get_level_values(1),\n",
     "            y = dict_amp[amp]['CT']['mean']\n",
     "        )\n",
-    "        reg_stat[str(amp)] = (slope, intercept, r_value, p_value, std_err)"
+    "        (slope, intercept, r_value, p_value, std_err), intercept_stderr = result, result.intercept_stderr\n",
+    "        reg_stat[str(amp)] = (slope, intercept, r_value, p_value, std_err, intercept_stderr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 43,
    "id": "64b222d1",
    "metadata": {},
    "outputs": [
@@ -4369,50 +4369,59 @@
        "  28.15792902236652,\n",
        "  -0.9876608312310189,\n",
        "  4.653394747136858e-06,\n",
-       "  0.19983669851927519),\n",
+       "  0.19983669851927519,\n",
+       "  0.4686586000629459),\n",
        " 'Amp2': (-3.234542693744165,\n",
        "  19.592283092125736,\n",
        "  -0.995935203615594,\n",
        "  1.4042851289587481e-08,\n",
-       "  0.1105669681527562),\n",
+       "  0.1105669681527562,\n",
+       "  0.3061460720360625),\n",
        " 'Amp3': (-3.29535,\n",
        "  19.07545,\n",
        "  -0.9884374521583013,\n",
        "  0.0014899081787325818,\n",
-       "  0.2918599250211193),\n",
+       "  0.2918599250211193,\n",
+       "  0.5055162188298217),\n",
        " 'Amp4': (-3.2872106595365422,\n",
        "  19.27187361853833,\n",
        "  -0.9986776268153118,\n",
        "  1.3356875158127825e-11,\n",
-       "  0.059828155666107725),\n",
+       "  0.059828155666107725,\n",
+       "  0.1938653816680126),\n",
        " 'Amp5': (-3.348790674603175,\n",
        "  19.277792658730153,\n",
        "  -0.9970851988735238,\n",
        "  4.389721160461525e-09,\n",
-       "  0.09685219616342584),\n",
+       "  0.09685219616342584,\n",
+       "  0.2681715879423785),\n",
        " 'Amp7': (-3.356492565359478,\n",
        "  18.997157216775598,\n",
        "  -0.9990239481975576,\n",
        "  9.556082536842385e-11,\n",
-       "  0.056092681626376935),\n",
+       "  0.056092681626376935,\n",
+       "  0.1553136025775763),\n",
        " 'Amp8': (-3.4698499999999997,\n",
        "  20.50515,\n",
        "  -0.9998912744553377,\n",
        "  1.3608935708123016e-06,\n",
-       "  0.029543795174848824),\n",
+       "  0.029543795174848824,\n",
+       "  0.051171354291246404),\n",
        " 'Amp9': (-3.43515,\n",
        "  18.925449999999998,\n",
        "  -0.9999107084921589,\n",
        "  1.0128456699277827e-06,\n",
-       "  0.026505392533120873),\n",
+       "  0.026505392533120873,\n",
+       "  0.045908686541922095),\n",
        " 'Amp10': (-3.3967103174603177,\n",
        "  19.417199735449735,\n",
        "  -0.9987858212181575,\n",
        "  2.051225977528511e-10,\n",
-       "  0.06332301307029561)}"
+       "  0.06332301307029561,\n",
+       "  0.17533348381386354)}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4423,12 +4432,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 41,
    "id": "023f552a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'reg_stat' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-41-893945e1bcee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mreg_stats\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreg_stat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morient\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'index'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'slope'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'intercept'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r_value'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'p_value'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'std_err'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'intercept_stderr'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'reg_stat' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "reg_stats = pd.DataFrame.from_dict(reg_stat, orient='index',columns=('slope', 'intercept', 'r_value', 'p_value', 'std_err'))"
+    "reg_stats = pd.DataFrame.from_dict(reg_stat, orient='index',columns=('slope', 'intercept', 'r_value', 'p_value', 'std_err','intercept_stderr'))"
    ]
   },
   {
