updated code to get intercept standard error

--- a/residual plasmid/compiled Lplasmid std/compiled plasmid.ipynb
+++ b/residual plasmid/compiled Lplasmid std/compiled plasmid.ipynb
@@ -4432,29 +4432,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "023f552a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'reg_stat' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-41-893945e1bcee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mreg_stats\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreg_stat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morient\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'index'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'slope'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'intercept'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r_value'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'p_value'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'std_err'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'intercept_stderr'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'reg_stat' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reg_stats = pd.DataFrame.from_dict(reg_stat, orient='index',columns=('slope', 'intercept', 'r_value', 'p_value', 'std_err','intercept_stderr'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "id": "d9c9a632",
    "metadata": {},
    "outputs": [],
@@ -4464,7 +4452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 46,
    "id": "976eaf19",
    "metadata": {},
    "outputs": [],
@@ -4474,7 +4462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 47,
    "id": "b6874ad9",
    "metadata": {},
    "outputs": [],
@@ -4484,7 +4472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 48,
    "id": "ad9ab2d2",
    "metadata": {},
    "outputs": [
@@ -4514,6 +4502,7 @@
        "      <th>r_value</th>\n",
        "      <th>p_value</th>\n",
        "      <th>std_err</th>\n",
+       "      <th>intercept_stderr</th>\n",
        "      <th>pcr efficiency</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -4525,6 +4514,7 @@
        "      <td>-0.988</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.200</td>\n",
+       "      <td>0.469</td>\n",
        "      <td>110.833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4534,6 +4524,7 @@
        "      <td>-0.996</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.111</td>\n",
+       "      <td>0.306</td>\n",
        "      <td>103.760</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4543,6 +4534,7 @@
        "      <td>-0.988</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.292</td>\n",
+       "      <td>0.506</td>\n",
        "      <td>101.136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4552,6 +4544,7 @@
        "      <td>-0.999</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.060</td>\n",
+       "      <td>0.194</td>\n",
        "      <td>101.479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4561,6 +4554,7 @@
        "      <td>-0.997</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.097</td>\n",
+       "      <td>0.268</td>\n",
        "      <td>98.883</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4570,6 +4564,7 @@
        "      <td>-0.999</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.056</td>\n",
+       "      <td>0.155</td>\n",
        "      <td>98.598</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4579,6 +4574,7 @@
        "      <td>-1.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.030</td>\n",
+       "      <td>0.051</td>\n",
        "      <td>94.171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4588,6 +4584,7 @@
        "      <td>-1.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.027</td>\n",
+       "      <td>0.046</td>\n",
        "      <td>95.488</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4597,6 +4594,7 @@
        "      <td>-0.999</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.063</td>\n",
+       "      <td>0.175</td>\n",
        "      <td>96.960</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -4604,19 +4602,30 @@
        "</div>"
       ],
       "text/plain": [
-       "       slope  intercept  r_value  p_value  std_err  pcr efficiency\n",
-       "Amp1  -3.087     28.158   -0.988    0.000    0.200         110.833\n",
-       "Amp2  -3.235     19.592   -0.996    0.000    0.111         103.760\n",
-       "Amp3  -3.295     19.075   -0.988    0.001    0.292         101.136\n",
-       "Amp4  -3.287     19.272   -0.999    0.000    0.060         101.479\n",
-       "Amp5  -3.349     19.278   -0.997    0.000    0.097          98.883\n",
-       "Amp7  -3.356     18.997   -0.999    0.000    0.056          98.598\n",
-       "Amp8  -3.470     20.505   -1.000    0.000    0.030          94.171\n",
-       "Amp9  -3.435     18.925   -1.000    0.000    0.027          95.488\n",
-       "Amp10 -3.397     19.417   -0.999    0.000    0.063          96.960"
+       "       slope  intercept  r_value  p_value  std_err  intercept_stderr  \\\n",
+       "Amp1  -3.087     28.158   -0.988    0.000    0.200             0.469   \n",
+       "Amp2  -3.235     19.592   -0.996    0.000    0.111             0.306   \n",
+       "Amp3  -3.295     19.075   -0.988    0.001    0.292             0.506   \n",
+       "Amp4  -3.287     19.272   -0.999    0.000    0.060             0.194   \n",
+       "Amp5  -3.349     19.278   -0.997    0.000    0.097             0.268   \n",
+       "Amp7  -3.356     18.997   -0.999    0.000    0.056             0.155   \n",
+       "Amp8  -3.470     20.505   -1.000    0.000    0.030             0.051   \n",
+       "Amp9  -3.435     18.925   -1.000    0.000    0.027             0.046   \n",
+       "Amp10 -3.397     19.417   -0.999    0.000    0.063             0.175   \n",
+       "\n",
+       "       pcr efficiency  \n",
+       "Amp1          110.833  \n",
+       "Amp2          103.760  \n",
+       "Amp3          101.136  \n",
+       "Amp4          101.479  \n",
+       "Amp5           98.883  \n",
+       "Amp7           98.598  \n",
+       "Amp8           94.171  \n",
+       "Amp9           95.488  \n",
+       "Amp10          96.960  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
